jenkins automation content changed

--- a/vagplaybook.yml
+++ b/vagplaybook.yml
@@ -7,7 +7,7 @@
       yum: name=httpd state=present
 
     - name: Amending webserver configuration file
-      copy: dest=/var/www/html/index.html content="This is my git managed server file"
+      copy: dest=/var/www/html/index.html content="This is my git managed server file. Testing jenkins automation"
 
     - name: starting webserver services
       service: name=httpd state=started	
